# molmine

./: .env.example  .gitignore  Cargo.toml  Makefile  diesel.toml  molmine.db  requirements.txt  styles.css  types.rs
migrations/2025-03-31-224919_initial_setup/: up.sql
migrations/2025-04-14-223324_create_posts/: up.sql
public/css/: styles.css
public/html/: navbar.html
public/js/: app.js  compound-manager.js  navbar.js  papers-manager.js  pdf-handler.js  project-manager.js
src/: app.rs  chemical_service.py  db.rs  error.rs  lib.rs  main.rs  rdkit.rs  rdkit_utils.rs  schema.rs  schema_printed.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  molmine.db  rdkit.rs  schema.rs  schema_printed.rs
src-tauri/src/models/: keys.rs  mod.rs
src/models/: mod.rs
src/pages/: about.rs  mod.rs  navbar.rs  projects.rs
style/: main.scss
