[package]
name = "molmine-ui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr","nightly"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.27"
thiserror = "2.0.12"
reqwest = "0.12.15"
derive_more = { version="2.0.1", features=["from"] }
rdkit-sys = "0.4.12"

[workspace]
members = ["src-tauri"]
