[package]
name = "molmine"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "molmine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1", features = ["rt-multi-thread", "test-util"] }
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.8", features = ["chrono", "serde_json"] }
diesel-async = { version = "0.5.2", features = [
    "bb8",
    "sqlite"
] }
diesel-derive-enum = { version = "2.1", features = ["sqlite"] }
diesel-derive-newtype = { version = "2.1"}
diesel_migrations = { version = "2.2.0", features = [
    "sqlite",
] }
thiserror = "2.0.12"
reqwest = { version = "0.12.5", features= ["json"] }
derive_more = { version = "2.0.1", features= ["from"] }
rdkit = "0.4.12"
rdkit-sys = "0.4.12"
rdkit-ffi = "0.1.0"

